# Legacy-project

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  ProjectOverview.md  README.md  main.py  package-lock.json  pyproject.toml  sample.ged  security.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
docs/: Accessibility.md  Architecture.md  Architecture_Log.md  EndToEnd_TestPlan&Policy.md  EndToEnd_TestPlan.md  Features_List.md  Flow.md  GenWeb_Audit.md  Heroku.md  ImplementationCertificate.md  Legacy_I18N_Conversion.md  Liste des fonctionnalités du projet.md  QualityAssurance.md  Security.md  Standards_Covention.md  Strategic_Decision.md  Unit_TestPlan.md  Weekly_Report.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
geneweb/: README.md  geneweb_colab.ipynb  run_test.sh
legacy/geneweb/lib/templ/bridge/: bindings.c  bindings.h  bridge.ml  build.sh  dune  main.c  parsers.c
legacy/geneweb/lib/templ/bridge/python/: analyse.py  bridge.py  dtogen.py  jinjagen.py  lint.py  main.py  pytypes.py  requirements.txt  templates.py
locales/: af.json  ar.json  bg.json  br.json  ca.json  co.json  cs.json  da.json  de.json  en.json  eo.json  es.json  et.json  fi.json  fr.json  he.json  is.json  it.json  lt.json  lv.json  nl.json  no.json  oc.json  pl.json  pt-br.json  pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  tr.json  zh.json
src/: startup.py  static.py
src/backend/: .coverage  database.db  main.py  pyproject.toml
src/backend/src/api/: book.py
src/backend/src/apps/: book.py
src/backend/src/database/: database.py
src/backend/src/dto/: first_name.py
src/backend/src/errors/: errors.py
src/backend/src/models/: models.py  models.sql
src/backend/src/repo/: base.py  individual.py
src/backend/src/service/: book.py  individual.py
src/backend/src/service/imports/: __init__.py  imports.py
src/backend/src/service/parser/: __init__.py  gedcom.py  parser.py
src/backend/src/utils/: files.py
src/backend/src/view/: __init__.py  imports.py  individual.py
src/backend/templates/: welcome.html.j2
src/backend/tests/apps/: test_book.py
src/backend/tests/service/: test_book.py
templates/: accent.html.j2  (+144 more)
(+195 files in other folders)
