[project]
name = "Legacy"
version = "0.1.0"
description = "Legacy Project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Evan Labourdette", email = "evan.labourdette@epitech.eu" }
]
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-playwright = "*"
playwright = "*"


[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["build/", "dist/", ".venv/", ".git/", ".mypy_cache/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poetry]
package-mode = false