[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "RedCommand",email = "senard.maxime@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi[standard] (>=0.117.1,<0.118.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "python-gedcom (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.1,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
